# GasSensing

./: .gitignore  codetest.ipynb  main.py  pyproject.toml  run_all.py  speed.py  speed_benchmark_real_data.csv  speed_benchmark_results.csv
checkpoint/: .temp_run_config
src/: dataset.py  lightning_cls.py  lightning_reg.py  model.py  utils.py
