[project]
name = "gassensing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.18.0",
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true  

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
